kanc/src/tests/sample_code/should_fail/single_file/type_check/match_case_param_labeledness_mismatch/labeled_variant_unlabeled_case.k
type Nat {
    .O: Nat,
    .S(~pred: Nat): Nat,
}

let plus = fun plus(-a: Nat, b: Nat): Nat {
    match a {
        .O => b,
        .S(a') => Nat.S(pred: plus(a', b)),
    }
};
